--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,14 @@
 <resources>
     <string name="app_name">WaitHater</string>
-    <string name="title_home">정류장</string>
-    <string name="title_dashboard">버스</string>
-    <string name="title_notifications">알림</string>
+    <string name="title_busStop">정류장</string>
+    <string name="title_route">버스</string>
+    <string name="title_notifications">알람</string>
     <string name="bus_stop_search_hint">정류장명 혹은 번호를 입력하세요.</string>
     <string name="route_search_hint">버스 노선 번호를 입력하세요.</string>
     <string name="there_is_no_image">이미지가 없습니다.</string>
     <string name="add_alarm">알람을 추가하려면 누르세요.</string>
+    <string name="set_alarm_busStop">정류장을 선택하세요.</string>
+    <string name="set_alarm_bus">타야하는 버스를 선택하세요.</string>
     <string name="set_alarm_time">버스를 타야하는 시각을 입력하세요.</string>
+    <string name="save">저장하기</string>
 </resources>
